--- a/45_21st March assignment/Feature Engineering Assignment.ipynb
+++ b/45_21st March assignment/Feature Engineering Assignment.ipynb
@@ -1,1 +1,241 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "09415dff",
+   "metadata": {},
+   "source": [
+    "# Q1. What is the difference between Ordinal Encoding and Label Encoding? Provide an example of when you might choose one over the other.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "Ordinal encoding and label encoding are both techniques used for encoding categorical data, but they differ in the way they assign numerical values to the categories.\n",
+    "\n",
+    "Ordinal encoding assigns a numerical value to each category based on its order or rank in the data. For example, if we have a categorical feature 'size' with three categories: 'small', 'medium', and 'large', ordinal encoding might assign the values 1, 2, and 3 to these categories, respectively, based on their order.\n",
+    "\n",
+    "Label encoding, on the other hand, assigns a unique numerical value to each category, without considering their order or rank. For example, label encoding might assign the values 1, 2, and 3 to the categories 'small', 'medium', and 'large', respectively, without considering their order.\n",
+    "\n",
+    "One might choose ordinal encoding over label encoding when there is a natural order or hierarchy among the categories. For example, in a dataset with a feature 'education level', the categories might include 'high school', 'college', 'master's', and 'PhD'. In this case, it makes sense to use ordinal encoding to preserve the natural order of the categories.\n",
+    "\n",
+    "On the other hand, one might choose label encoding over ordinal encoding when there is no inherent order among the categories, or when the categories are nominal. For example, in a dataset with a feature 'color', the categories might include 'red', 'green', and 'blue'. In this case, it would not make sense to use ordinal encoding, as there is no natural order among the colors. Instead, label encoding would be a better choice, as it assigns a unique value to each category without considering their order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "321cdede",
+   "metadata": {},
+   "source": [
+    "# Q2. Explain how Target Guided Ordinal Encoding works and provide an example of when you might use it in a machine learning project.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "Target guided ordinal encoding is a technique used to encode categorical variables that can be used for predictive modeling. It involves encoding each category of a categorical variable with a number that is calculated based on the relationship between the category and the target variable.\n",
+    "\n",
+    "The basic steps involved in target guided ordinal encoding are as follows:\n",
+    "\n",
+    "1. Group the data by the categorical variable and calculate the mean of the target variable for each category.\n",
+    "\n",
+    "2. Sort the categories by the mean target value in ascending or descending order.\n",
+    "\n",
+    "3. Assign an ordinal number to each category based on its position in the sorted list.\n",
+    "\n",
+    "4. Replace the category values in the original dataset with the corresponding ordinal numbers.\n",
+    "\n",
+    "For example, consider a dataset with a categorical variable 'City' that has four categories: 'New York', 'Chicago', 'Los Angeles', and 'Houston'. The target variable is 'Sales', which is a continuous variable representing the sales revenue for each observation.\n",
+    "\n",
+    "Using target guided ordinal encoding, we can encode each category with a number that reflects its relationship with the target variable 'Sales'. Suppose the mean sales revenue for each category is as follows:\n",
+    "\n",
+    "* New York: 1000\n",
+    "* Chicago: 800\n",
+    "* Los Angeles: 1200\n",
+    "* Houston: 600\n",
+    "\n",
+    "We can then sort the categories by their mean sales revenue in descending order:\n",
+    "\n",
+    "* Los Angeles: 1200\n",
+    "* New York: 1000\n",
+    "* Chicago: 800\n",
+    "* Houston: 600\n",
+    "\n",
+    "We can assign ordinal numbers to each category based on their position in the sorted list:\n",
+    "\n",
+    "* Los Angeles: 4\n",
+    "* New York: 3\n",
+    "* Chicago: 2\n",
+    "* Houston: 1\n",
+    "\n",
+    "We can then replace the category values in the original dataset with the corresponding ordinal numbers.\n",
+    "\n",
+    "Target guided ordinal encoding can be useful in situations where the categorical variable has a strong relationship with the target variable and the goal is to capture this relationship in the encoding. It can be particularly effective when dealing with high cardinality categorical variables, where there are many categories and it is difficult to apply one-hot encoding or other techniques that create a large number of binary features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47a1995d",
+   "metadata": {},
+   "source": [
+    "# Q3. Define covariance and explain why it is important in statistical analysis. How is covariance calculated?\n",
+    "\n",
+    "Covariance is a measure of the linear relationship between two variables. It measures how much two variables change together. Specifically, covariance measures the degree to which two variables are related, such that when one variable increases or decreases, the other variable tends to increase or decrease as well.\n",
+    "\n",
+    "Covariance is an important concept in statistical analysis because it helps us to understand the relationship between two variables. If the covariance between two variables is positive, it means that they tend to increase or decrease together. If the covariance is negative, it means that they tend to move in opposite directions. If the covariance is zero, it means that there is no linear relationship between the variables.\n",
+    "\n",
+    "Covariance is calculated as the average of the product of the deviations of each variable from its mean. The formula for covariance is:\n",
+    "\n",
+    "cov(X,Y) = 1/n * Σ (xi - mean(X)) * (yi - mean(Y))\n",
+    "\n",
+    "where X and Y are the two variables, xi and yi are the individual data points for each variable, mean(X) and mean(Y) are the means of the variables, and n is the number of data points.\n",
+    "\n",
+    "Covariance can take on any value, with larger positive values indicating a stronger positive relationship between the variables, larger negative values indicating a stronger negative relationship, and values close to zero indicating no relationship.\n",
+    "\n",
+    "Covariance is often used in conjunction with correlation, which is a standardized measure of the linear relationship between two variables that ranges from -1 to 1. Correlation is preferred over covariance because it is not affected by differences in the scale or units of measurement of the variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d81c8f93",
+   "metadata": {},
+   "source": [
+    "# Q4. For a dataset with the following categorical variables: Color (red, green, blue), Size (small, medium, large), and Material (wood, metal, plastic), perform label encoding using Python's scikit-learn library. Show your code and explain the output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6ac5c395",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Color  Size  Material\n",
+      "0      2     2         2\n",
+      "1      1     1         0\n",
+      "2      0     0         1\n",
+      "3      1     2         1\n",
+      "4      2     1         2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import pandas as pd\n",
+    "\n",
+    "# create a sample dataset\n",
+    "data = {'Color': ['red', 'green', 'blue', 'green', 'red'],\n",
+    "        'Size': ['small', 'medium', 'large', 'small', 'medium'],\n",
+    "        'Material': ['wood', 'metal', 'plastic', 'plastic', 'wood']}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# create a label encoder object\n",
+    "le = LabelEncoder()\n",
+    "\n",
+    "# encode the categorical variables\n",
+    "df['Color'] = le.fit_transform(df['Color'])\n",
+    "df['Size'] = le.fit_transform(df['Size'])\n",
+    "df['Material'] = le.fit_transform(df['Material'])\n",
+    "\n",
+    "# view the encoded dataset\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50a1e4c0",
+   "metadata": {},
+   "source": [
+    "In this code, we first create a sample dataset with three categorical variables: Color, Size, and Material. We then use scikit-learn's LabelEncoder to perform label encoding for each variable.\n",
+    "\n",
+    "For each variable, we create a LabelEncoder object and fit it to the values of the variable using the fit_transform method. This method assigns a unique integer label to each category in the variable. We then replace the original values of the variable with the encoded labels.\n",
+    "\n",
+    "The output shows the resulting encoded dataset, where each categorical variable has been replaced with its corresponding integer labels. For example, 'red', 'green', and 'blue' in the 'Color' variable have been replaced with 2, 1, and 0 respectively. Similarly, 'small', 'medium', and 'large' in the 'Size' variable have been replaced with 2, 0, and 1 respectively, and 'wood', 'metal', and 'plastic' in the 'Material' variable have been replaced with 2, 1, and 0 respectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "402538ad",
+   "metadata": {},
+   "source": [
+    "# Q5. Calculate the covariance matrix for the following variables in a dataset: Age, Income, and Education level. Interpret the results.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "To calculate the covariance matrix for the variables Age, Income, and Education level, we first need to have a dataset that includes these variables. Let's assume that we have a dataset with n observations, where each observation includes the values of Age, Income, and Education level for a particular individual.\n",
+    "\n",
+    "The covariance matrix for these variables is a 3x3 matrix that shows the pairwise covariances between the variables. Specifically, the (i, j)th element of the covariance matrix represents the covariance between the ith variable and the jth variable. The diagonal elements of the matrix represent the variances of each variable.\n",
+    "\n",
+    "The formula to calculate the covariance between two variables X and Y is:\n",
+    "\n",
+    "__cov(X, Y) = 1/n * Σ (xi - mean(X)) * (yi - mean(Y))__\n",
+    "\n",
+    "where xi and yi are the individual data points for X and Y, and mean(X) and mean(Y) are the means of the variables.\n",
+    "\n",
+    "Using this formula, we can calculate the covariance matrix for the variables Age, Income, and Education level. \n",
+    "\n",
+    "Interpreting the results of the covariance matrix depends on the values of the covariances. If two variables have a positive covariance, it means that they tend to increase or decrease together. If two variables have a negative covariance, it means that they tend to move in opposite directions. A covariance of zero indicates that there is no linear relationship between the variables.\n",
+    "\n",
+    "Additionally, the magnitudes of the covariances provide information about the strength of the relationship between the variables. Large positive or negative covariances indicate a strong relationship, while small or close-to-zero covariances indicate a weak relationship.\n",
+    "\n",
+    "Therefore, by interpreting the values in the covariance matrix, we can gain insights into the relationships between the variables in the dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49110119",
+   "metadata": {},
+   "source": [
+    "# Q6. You are working on a machine learning project with a dataset containing several categorical variables, including \"Gender\" (Male/Female), \"Education Level\" (High School/Bachelor's/Master's/PhD), and \"Employment Status\" (Unemployed/Part-Time/Full-Time). Which encoding method would you use for each variable, and why?\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "For the \"Gender\" variable, since there are only two possible values (Male and Female), we can use label encoding to represent them as 0 and 1. There is no need for one-hot encoding since there is only one binary variable.\n",
+    "\n",
+    "For the \"Education Level\" variable, we can use ordinal encoding since there is a natural order to the categories (High School < Bachelor's < Master's < PhD). This would assign an integer value to each category, with higher values indicating higher education levels. Alternatively, we could also use one-hot encoding if we do not want to assume an inherent order to the categories.\n",
+    "\n",
+    "For the \"Employment Status\" variable, we can use one-hot encoding since there is no inherent order to the categories, and each category is equally important. This would create three binary variables representing the three categories (Unemployed, Part-Time, and Full-Time), with a value of 1 indicating that an individual belongs to that category and a value of 0 indicating that they do not.\n",
+    "\n",
+    "Ultimately, the choice of encoding method depends on the specific characteristics of the variables and the requirements of the machine learning algorithm being used."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "267e2315",
+   "metadata": {},
+   "source": [
+    "# Q7. You are analyzing a dataset with two continuous variables, \"Temperature\" and \"Humidity\", and two categorical variables, \"Weather Condition\" (Sunny/Cloudy/Rainy) and \"Wind Direction\" (North/South/ East/West). Calculate the covariance between each pair of variables and interpret the results.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "To calculate the covariance between each pair of variables, we can use the formula:\n",
+    "\n",
+    "__cov(X, Y) = 1/n * Σ (xi - mean(X)) * (yi - mean(Y))__\n",
+    "\n",
+    "where X and Y are the two variables being compared, xi and yi are individual data points for X and Y, and mean(X) and mean(Y) are the means of the variables. We can use this formula to calculate the covariance between Temperature and Humidity, Temperature and Weather Condition, Humidity and Weather Condition, Temperature and Wind Direction, and Humidity and Wind Direction.\n",
+    "\n",
+    "Interpreting the results of the covariances will depend on the magnitudes of the values, as well as the sign of the covariance. A positive covariance indicates that the variables tend to increase or decrease together, while a negative covariance indicates that they tend to move in opposite directions. A covariance of zero indicates that there is no linear relationship between the variables."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
