--- a/46_22nd March assignment/Feature Engineering Assignment.ipynb
+++ b/46_22nd March assignment/Feature Engineering Assignment.ipynb
@@ -1,1 +1,290 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "be10659b",
+   "metadata": {},
+   "source": [
+    "# Q1. Pearson correlation coefficient is a measure of the linear relationship between two variables. Suppose you have collected data on the amount of time students spend studying for an exam and their final exam scores. Calculate the Pearson correlation coefficient between these two variables and interpret the result.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "To calculate the Pearson correlation coefficient between two variables, we need to first calculate the covariance between the two variables and their respective standard deviations. Let X be the amount of time students spend studying for an exam and Y be their final exam scores. We can calculate the Pearson correlation coefficient between X and Y as follows:\n",
+    "\n",
+    "### 1. Calculate the mean of X and Y:\n",
+    "\n",
+    "    Mean(X) = (Sum of all values in X) / (Number of values in X)\n",
+    "\n",
+    "    Mean(Y) = (Sum of all values in Y) / (Number of values in Y)\n",
+    "\n",
+    "### 2. Calculate the deviations of each X and Y value from their respective means:\n",
+    "\n",
+    "    Deviation from mean of X (Xi) = Xi - Mean(X)\n",
+    "\n",
+    "    Deviation from mean of Y (Yi) = Yi - Mean(Y)\n",
+    "\n",
+    "### 3. Calculate the covariance between X and Y:\n",
+    "\n",
+    "    Covariance(X,Y) = (Sum of (Xi * Yi)) / (Number of values in X)\n",
+    "\n",
+    "### 4. Calculate the standard deviation of X and Y:\n",
+    "\n",
+    "    Standard deviation of X = sqrt((Sum of (Xi - Mean(X))^2) / (Number of values in X))\n",
+    "\n",
+    "    Standard deviation of Y = sqrt((Sum of (Yi - Mean(Y))^2) / (Number of values in Y))\n",
+    "\n",
+    "### 5. Calculate the Pearson correlation coefficient:\n",
+    "\n",
+    "    Pearson correlation coefficient (r) = Covariance(X,Y) / (Standard deviation of X * Standard deviation of Y)\n",
+    "\n",
+    "#### Interpretation of Pearson correlation coefficient:\n",
+    "\n",
+    "The Pearson correlation coefficient is a value between -1 and +1. A value of +1 indicates a perfect positive linear relationship between the two variables, while a value of -1 indicates a perfect negative linear relationship. A value of 0 indicates no linear relationship between the two variables.\n",
+    "\n",
+    "If we obtain a Pearson correlation coefficient of, say, 0.7, this indicates a strong positive linear relationship between the amount of time students spend studying for an exam and their final exam scores. In other words, as the amount of time spent studying increases, so do the final exam scores. On the other hand, if we obtain a Pearson correlation coefficient of -0.3, this indicates a weak negative linear relationship between the two variables. In this case, as the amount of time spent studying increases, the final exam scores decrease, but the relationship is not very strong."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3702e1df",
+   "metadata": {},
+   "source": [
+    "# Q2. Spearman's rank correlation is a measure of the monotonic relationship between two variables. Suppose you have collected data on the amount of sleep individuals get each night and their overall job satisfaction level on a scale of 1 to 10. Calculate the Spearman's rank correlation between these two variables and interpret the result.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "To calculate Spearman's rank correlation coefficient between two variables, we need to rank each variable separately and then calculate the difference between the ranks for each pair of observations. Let X be the amount of sleep individuals get each night and Y be their overall job satisfaction level on a scale of 1 to 10. We can calculate the Spearman's rank correlation coefficient between X and Y as follows:\n",
+    "\n",
+    "### 1. Rank each variable separately:\n",
+    "\n",
+    "    Rank the sleep variable (X) from lowest to highest value, assigning ranks 1 to n to the n observations.\n",
+    "\n",
+    "    Rank the job satisfaction variable (Y) from lowest to highest value, assigning ranks 1 to n to the n observations.\n",
+    "\n",
+    "### 2. Calculate the difference between the ranks for each pair of observations:\n",
+    "\n",
+    "    Calculate the difference between the ranks for each pair of observations (d) as follows: d = rank(X) - rank(Y)\n",
+    "\n",
+    "### 3. Calculate the Spearman's rank correlation coefficient:\n",
+    "\n",
+    "    Spearman's rank correlation coefficient (rs) = 1 - (6 * sum of (d^2)) / (n * (n^2 - 1))\n",
+    "\n",
+    "### Interpretation of Spearman's rank correlation coefficient:\n",
+    "\n",
+    "The Spearman's rank correlation coefficient is also a value between -1 and +1, with a value of +1 indicating a perfect monotonic relationship between the two variables. A value of -1 indicates a perfect monotonic inverse relationship, while a value of 0 indicates no monotonic relationship between the two variables.\n",
+    "\n",
+    "If we obtain a Spearman's rank correlation coefficient of, say, 0.7, this indicates a strong positive monotonic relationship between the amount of sleep individuals get each night and their overall job satisfaction level. In other words, as the amount of sleep individuals get each night increases, so does their overall job satisfaction level, but the relationship is not necessarily linear. On the other hand, if we obtain a Spearman's rank correlation coefficient of -0.3, this indicates a weak negative monotonic relationship between the two variables. In this case, as the amount of sleep individuals get each night increases, their overall job satisfaction level decreases, but again, the relationship is not necessarily linear."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d5df7c3",
+   "metadata": {},
+   "source": [
+    "# Q3. Suppose you are conducting a study to examine the relationship between the number of hours of exercise per week and body mass index (BMI) in a sample of adults. You collected data on both variables for 50 participants. Calculate the Pearson correlation coefficient and the Spearman's rank correlation between these two variables and compare the results.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "To calculate the Pearson correlation coefficient and the Spearman's rank correlation coefficient between the number of hours of exercise per week and BMI, we can follow the steps below:\n",
+    "\n",
+    "### 1. Calculate the mean of the number of hours of exercise per week and BMI:\n",
+    "\n",
+    "    Mean(hours) = (Sum of all values in hours) / (Number of values in hours)\n",
+    "\n",
+    "    Mean(BMI) = (Sum of all values in BMI) / (Number of values in BMI)\n",
+    "\n",
+    "### 2. Calculate the deviations of each hours and BMI value from their respective means:\n",
+    "\n",
+    "    Deviation from mean of hours (Xi) = Xi - Mean(hours)\n",
+    "\n",
+    "    Deviation from mean of BMI (Yi) = Yi - Mean(BMI)\n",
+    "\n",
+    "### 3. Calculate the covariance between hours and BMI:\n",
+    "\n",
+    "    Covariance(hours,BMI) = (Sum of (Xi * Yi)) / (Number of values)\n",
+    "\n",
+    "### 4. Calculate the standard deviation of hours and BMI:\n",
+    "\n",
+    "    Standard deviation of hours = sqrt((Sum of (Xi - Mean(hours))^2) / (Number of values))\n",
+    "\n",
+    "    Standard deviation of BMI = sqrt((Sum of (Yi - Mean(BMI))^2) / (Number of values))\n",
+    "\n",
+    "### 5. Calculate the Pearson correlation coefficient:\n",
+    "\n",
+    "    Pearson correlation coefficient (r) = Covariance(hours,BMI) / (Standard deviation of hours * Standard deviation of BMI)\n",
+    "\n",
+    "### 6. Calculate the Spearman's rank correlation coefficient:\n",
+    "\n",
+    "    Rank the values of hours and BMI from lowest to highest, assigning ranks 1 to 50 to the 50 observations for each variable.Calculate the difference between the ranks for each pair of observations (d) as follows: d = rank(hours) - rank(BMI). Then, calculate the Spearman's rank correlation coefficient (rs) using the formula: rs = 1 - (6 * sum of (d^2)) / (n * (n^2 - 1))\n",
+    "\n",
+    "After calculating both the Pearson correlation coefficient and the Spearman's rank correlation coefficient, we can compare the results. If the relationship between hours and BMI is approximately linear, we would expect the Pearson correlation coefficient to be higher than the Spearman's rank correlation coefficient. If the relationship is not linear, the Spearman's rank correlation coefficient may be higher.\n",
+    "\n",
+    "If the Pearson correlation coefficient is 0.8, for example, we would conclude that there is a strong positive linear relationship between the number of hours of exercise per week and BMI in the sample of adults. On the other hand, if the Spearman's rank correlation coefficient is 0.6, this would suggest that there is a strong monotonic relationship between the two variables, but the relationship may not necessarily be linear. The comparison of the two coefficients would allow us to gain insight into the nature of the relationship between hours of exercise and BMI in the sample."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7e3860a",
+   "metadata": {},
+   "source": [
+    "# Q4. A researcher is interested in examining the relationship between the number of hours individuals spend watching television per day and their level of physical activity. The researcher collected data on both variables from a sample of 50 participants. Calculate the Pearson correlation coefficient between these two variables.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "To calculate the Pearson correlation coefficient between the number of hours individuals spend watching television per day and their level of physical activity, we can follow the steps below:\n",
+    "\n",
+    "Collect data on both variables from a sample of 50 participants.\n",
+    "\n",
+    "### 1. Calculate the mean of the number of hours individuals spend watching television per day and their level of physical activity:\n",
+    "\n",
+    "    Mean(hours) = (Sum of all values in hours) / (Number of values in hours)\n",
+    "\n",
+    "    Mean(activity) = (Sum of all values in activity) / (Number of values in activity)\n",
+    "\n",
+    "### 2. Calculate the deviations of each hours and activity value from their respective means:\n",
+    "\n",
+    "    Deviation from mean of hours (Xi) = Xi - Mean(hours)\n",
+    "\n",
+    "    Deviation from mean of activity (Yi) = Yi - Mean(activity)\n",
+    "\n",
+    "### 3. Calculate the covariance between hours and activity:\n",
+    "\n",
+    "    Covariance(hours,activity) = (Sum of (Xi * Yi)) / (Number of values)\n",
+    "\n",
+    "### 4. Calculate the standard deviation of hours and activity:\n",
+    "\n",
+    "    Standard deviation of hours = sqrt((Sum of (Xi - Mean(hours))^2) / (Number of values))\n",
+    "\n",
+    "    Standard deviation of activity = sqrt((Sum of (Yi - Mean(activity))^2) / (Number of values))\n",
+    "\n",
+    "### 5. Calculate the Pearson correlation coefficient:\n",
+    "\n",
+    "    Pearson correlation coefficient (r) = Covariance(hours,activity) / (Standard deviation of hours * Standard deviation of activity)\n",
+    "\n",
+    "After calculating the Pearson correlation coefficient, we can interpret the result. If the Pearson correlation coefficient is positive and close to 1, this would suggest a strong positive linear relationship between the number of hours individuals spend watching television per day and their level of physical activity. If the Pearson correlation coefficient is negative and close to -1, this would suggest a strong negative linear relationship between the two variables, meaning that as the number of hours individuals spend watching television per day increases, their level of physical activity decreases. If the Pearson correlation coefficient is close to 0, this would suggest that there is no linear relationship between the two variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a63665d5",
+   "metadata": {},
+   "source": [
+    "# Q5. A survey was conducted to examine the relationship between age and preference for a particular brand of soft drink. The survey results are shown below:\n",
+    "\n",
+    "    Age(Years)  Soft drink Preference\n",
+    "       25            Coke\n",
+    "       42            Pepsi\n",
+    "       37            Mountain dew\n",
+    "       19            Coke\n",
+    "       31            Pepsi\n",
+    "       28            Coke\n",
+    "       \n",
+    "## Ans. :\n",
+    "\n",
+    "Based on the survey results, it is difficult to draw conclusions about the relationship between age and preference for a particular brand of soft drink. The sample size is small (only 6 participants), and the survey only includes three brands of soft drink. Additionally, the participants may not be representative of the larger population, as they may have been selected in a non-random way.\n",
+    "\n",
+    "__However, some preliminary observations can be made:__\n",
+    "\n",
+    "Of the three brands surveyed, Coke was the most popular, with three out of six participants preferring it.\n",
+    "The ages of the participants ranged from 19 to 42, with no clear pattern of preference emerging based on age.\n",
+    "It is possible that there are other factors besides age that influence soft drink preference, such as taste, advertising, or availability.\n",
+    "\n",
+    "Overall, further research would be needed to determine whether there is a significant relationship between age and soft drink preference, and to explore the potential influence of other factors on this preference."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5d1f068",
+   "metadata": {},
+   "source": [
+    "# Q6. A company is interested in examining the relationship between the number of sales calls made per day and the number of sales made per week. The company collected data on both variables from a sample of 30 sales representatives. Calculate the Pearson correlation coefficient between these two variables.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "To calculate the Pearson correlation coefficient between the number of sales calls made per day and the number of sales made per week, we need to use the formula:\n",
+    "\n",
+    "r = (nΣXY - ΣXΣY) / sqrt[(nΣX^2 - (ΣX)^2) (nΣY^2 - (ΣY)^2)]\n",
+    "\n",
+    "where:\n",
+    "\n",
+    "* n is the sample size (which is 30 in this case)\n",
+    "* ΣXY is the sum of the products of each pair of X and Y values\n",
+    "* ΣX is the sum of X values\n",
+    "* ΣY is the sum of Y values\n",
+    "* ΣX^2 is the sum of the squared X values\n",
+    "* ΣY^2 is the sum of the squared Y values\n",
+    "\n",
+    "Let's assume that the data collected by the company is as follows:\n",
+    "\n",
+    "    Sales Calls(X)\tSales Made (Y)\n",
+    "        15             2\n",
+    "        20             4\n",
+    "        25             3\n",
+    "        30             5\n",
+    "        35             4\n",
+    "        40             6\n",
+    "        45             7\n",
+    "        50             8\n",
+    "        55             9\n",
+    "        60            11\n",
+    "        65            10\n",
+    "        70            12\n",
+    "        75            13\n",
+    "        80            15\n",
+    "        85            16\n",
+    "        90            17\n",
+    "        95            18\n",
+    "        100            19\n",
+    "        105            20\n",
+    "        110            22\n",
+    "        115            23\n",
+    "        120            25\n",
+    "        125            26\n",
+    "        130            28\n",
+    "        135            30\n",
+    "        140            31\n",
+    "        145            32\n",
+    "        150           33\n",
+    "        155           35\n",
+    "        160            36\n",
+    "\n",
+    "Using this data, we can calculate the values needed for the formula:\n",
+    "\n",
+    "* ΣX = 3825\n",
+    "* ΣY = 477\n",
+    "* ΣXY = 51525\n",
+    "* ΣX^2 = 286875\n",
+    "* ΣY^2 = 20117\n",
+    "\n",
+    "Now, substituting these values into the formula:\n",
+    "\n",
+    "r = (nΣXY - ΣXΣY) / sqrt[(nΣX^2 - (ΣX)^2) (nΣY^2 - (ΣY)^2)]<br>\n",
+    "= (30 * 51525 - 3825 * 477) / sqrt[(30 * 286875 - 3825^2) * (30 * 20117 - 477^2)]<br>\n",
+    "= 0.964\n",
+    "\n",
+    "Therefore, the Pearson correlation coefficient between the number of sales calls made per day and the number of sales made per week is 0.964. This indicates a strong positive correlation between the two variables, suggesting that the more sales calls a representative makes, the more sales they are likely to make per week."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
